Fix descenders being cut off in Safari

--- a/src/css/flip.css
+++ b/src/css/flip.css
@@ -14,7 +14,6 @@
 	outline: 0;
 	cursor: pointer;
 	color: inherit;
-	line-height: 1;
 }
 
 .flip-text {
